pythonapi/manifests/min.yaml
# MINIMUM REQUIRED Environment Variables in Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-sync-service
  namespace: vault-sync
spec:
  template:
    spec:
      containers:
      - name: vault-sync
        image: vault-sync-service:latest
